@@ -1,6 +1,7 @@
 package software.tnb.cryostat.resource.openshift;
 
 import software.tnb.common.deployment.ReusableOpenshiftDeployable;
+import software.tnb.common.deployment.WithCustomResource;
 import software.tnb.common.deployment.WithOperatorHub;
 import software.tnb.common.openshift.OpenshiftClient;
 import software.tnb.common.utils.HTTPUtils;
@@ -18,39 +19,26 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import cz.xtf.core.openshift.helpers.ResourceParsers;
+import io.fabric8.kubernetes.api.model.GenericKubernetesResource;
+import io.fabric8.kubernetes.api.model.GenericKubernetesResourceBuilder;
 import io.fabric8.kubernetes.api.model.Pod;
 import io.fabric8.kubernetes.client.dsl.PodResource;
-import io.fabric8.kubernetes.client.dsl.base.CustomResourceDefinitionContext;
 import okhttp3.Request;
 
 @AutoService(Cryostat.class)
-public class OpenshiftCryostat extends Cryostat implements ReusableOpenshiftDeployable, WithOperatorHub {
+public class OpenshiftCryostat extends Cryostat implements ReusableOpenshiftDeployable, WithOperatorHub, WithCustomResource {
 
     private static final Logger LOG = LoggerFactory.getLogger(OpenshiftCryostat.class);
     private static final String APP_NAME = "cryostat-" + OpenshiftClient.get().getNamespace();
 
-    private static final CustomResourceDefinitionContext CRYOSTAT_CTX = new CustomResourceDefinitionContext.Builder()
-        .withName("Cryostat")
-        .withGroup("operator.cryostat.io")
-        .withVersion("v1beta1")
-        .withPlural("cryostats")
-        .withScope("Namespaced")
-        .build();
-
     @Override
     public void undeploy() {
-        try {
-            OpenshiftClient.get().customResource(CRYOSTAT_CTX).delete(OpenshiftClient.get().getNamespace(), APP_NAME, true);
-            WaitUtils.waitFor(() -> servicePod() == null, "Waiting until the pod is removed");
-            deleteSubscription(() -> OpenshiftClient.get().getLabeledPods("control-plane", "controller-manager")
-                .stream().noneMatch(p -> p.getMetadata().getName().contains("cryostat")));
-        } catch (IOException e) {
-            LOG.error("Error on Cryostat deletetion", e);
-            throw new RuntimeException(e);
-        }
+        OpenshiftClient.get().genericKubernetesResources(apiVersion(), kind()).delete();
+        WaitUtils.waitFor(() -> servicePod() == null, "Waiting until the pod is removed");
+        deleteSubscription(() -> OpenshiftClient.get().getLabeledPods("control-plane", "controller-manager")
+            .stream().noneMatch(p -> p.getMetadata().getName().contains("cryostat")));
     }
 
     /**
@@ -75,17 +63,12 @@ public class OpenshiftCryostat extends Cryostat implements ReusableOpenshiftDepl
         // Create subscription
         createSubscription();
 
-        try {
-            OpenshiftClient.get().customResource(CRYOSTAT_CTX).createOrReplace(getCryostatDefinition());
-        } catch (IOException e) {
-            LOG.error("Error on Cryostat creation", e);
-            throw new RuntimeException(e);
-        }
+        OpenshiftClient.get().genericKubernetesResources(apiVersion(), kind()).resource(customResource()).create();
     }
 
     @Override
     public boolean isReady() {
-        final PodResource<Pod> pod = servicePod();
+        final PodResource pod = servicePod();
         try {
             return pod != null && pod.isReady()
                 && HTTPUtils.trustAllSslClient().newCall(new Request.Builder().get().url(String.format("https://%s/health"
@@ -99,9 +82,9 @@ public class OpenshiftCryostat extends Cryostat implements ReusableOpenshiftDepl
     public boolean isDeployed() {
         // Cryostat / Hyperfoil operators do not have any unique label, so the pod name is used as well
         List<Pod> pods = OpenshiftClient.get().pods().withLabel("control-plane", "controller-manager").list().getItems().stream()
-            .filter(p -> p.getMetadata().getName().contains("cryostat")).collect(Collectors.toList());
+            .filter(p -> p.getMetadata().getName().contains("cryostat")).toList();
         return pods.size() == 1 && ResourceParsers.isPodReady(pods.get(0))
-            && ((List) OpenshiftClient.get().customResource(CRYOSTAT_CTX).list().get("items")).size() == 1;
+            && OpenshiftClient.get().genericKubernetesResources(apiVersion(), kind()).list().getItems().size() == 1;
     }
 
     @Override
@@ -124,17 +107,6 @@ public class OpenshiftCryostat extends Cryostat implements ReusableOpenshiftDepl
         return 8181;
     }
 
-    private Map<String, Object> getCryostatDefinition() {
-        Map<String, Object> metadata = Map.of("name", APP_NAME
-            , "namespace", OpenshiftClient.get().getNamespace());
-        Map<String, Object> spec = Map.of("enableCertManager", false
-            , "minimal", true);
-        return Map.of("kind", CRYOSTAT_CTX.getName()
-            , "apiVersion", String.format("%s/%s", CRYOSTAT_CTX.getGroup(), CRYOSTAT_CTX.getVersion())
-            , "metadata", metadata
-            , "spec", spec);
-    }
-
     @Override
     public void cleanup() {
         //all recording should be removed from the tests
@@ -143,5 +115,31 @@ public class OpenshiftCryostat extends Cryostat implements ReusableOpenshiftDepl
     @Override
     public String operatorName() {
         return "cryostat-operator";
+    }
+
+    @Override
+    public String kind() {
+        return "Cryostat";
+    }
+
+    @Override
+    public String apiVersion() {
+        return "operator.cryostat.io/v1beta1";
+    }
+
+    @Override
+    public GenericKubernetesResource customResource() {
+        return new GenericKubernetesResourceBuilder()
+            .withKind(kind())
+            .withApiVersion(apiVersion())
+            .withNewMetadata()
+            .withName(APP_NAME)
+            .withNamespace(OpenshiftClient.get().getNamespace())
+            .endMetadata()
+            .withAdditionalProperties(Map.of("spec", Map.of(
+                "enableCertManager", false
+                , "minimal", true
+            )))
+            .build();
     }
 }
